--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "nested"
   ],
   "dependencies": {
-    "sortablejs": "1.14.0"
+    "sortablejs": "https://github.com/Teamwork/Sortable.git"
   },
   "peerDependencies": {
     "vue": "^3.0.1"
